--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 node_js:
   - 0.10
 before_script:
-  - npm install component saucer-js
+  - npm install component component-stylus saucer-js
   - component install
-  - component build
+  - component build --standalone shoelace-modal --use component-stylus
 script: saucer test
 env:
   global:
