--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 node_js:
   - 0.10
+
+env:
+  global:
+    - secure: "TqVfmEpVhj53qX/QDmuAWjWPEQnHXeTVaZumb2gjrgjXPf9XxDxm36r2wDa3+TaGCFAFYbrWRJWTssEutP6s6nKa8llVCQHC0CM22ei6U3cZQoeQzsb59/vk0LKz/xk4ypIimxnRvLk5zla7h+kBiSTHHCznV9ylVnDuG1plM2Q="
+    - secure: "NI2+3bTcBQHIBf+eV/943VCWy+qoZWfiTgHMWDmEqgcZ4w8nEjdrrSRtAr5YBEJRDhli2TOg1yc22rhDyI+Labnu68yyuy9DeKFBYq3sCE70QZyZXsfhU2aMD9u+dpmLup7m2ynrmszfSJvcRCE6aW5C83SlB4NQvbJYwh+CtJQ="
+
 before_script:
   - npm install component component-stylus git+https://github.com/mvanasse/saucer
   - component install
   - component build --standalone shoelace-modal --use component-stylus
+
 script: saucer test
-env:
-  global:
-    - secure: TqVfmEpVhj53qX/QDmuAWjWPEQnHXeTVaZumb2gjrgjXPf9XxDxm36r2wDa3+TaGCFAFYbrWRJWTssEutP6s6nKa8llVCQHC0CM22ei6U3cZQoeQzsb59/vk0LKz/xk4ypIimxnRvLk5zla7h+kBiSTHHCznV9ylVnDuG1plM2Q=
-    - secure: NI2+3bTcBQHIBf+eV/943VCWy+qoZWfiTgHMWDmEqgcZ4w8nEjdrrSRtAr5YBEJRDhli2TOg1yc22rhDyI+Labnu68yyuy9DeKFBYq3sCE70QZyZXsfhU2aMD9u+dpmLup7m2ynrmszfSJvcRCE6aW5C83SlB4NQvbJYwh+CtJQ=
